# games-card

./: README.md  meson.build
data/: games-card.desktop.in  meson.build
data/card-style/: meson.build
data/card-style/classic/: meson.build
data/card-style/default/: meson.build
data/table/: meson.build
po/: POTFILES.in  games-card.pot  zh_CN.po
src/: games-player.c  games-player.h  games-utils.c  games-utils.h  games-window.c  games-window.h  main.c  meson.build
src/resources/: games-admin.gresource.xml  jeton-menus-function-manager.ui
