tables = [
   ['dealer_button.png'],
   ['table.png'],
   ['jeton_200.png'],
   ['jeton_100.png'],
   ['jeton_50.png'],
   ['jeton_20.png'],
   ['jeton_10.png'],
   ['jeton_5.png']
]
foreach table: tables
  install_data(table,
    install_dir : join_paths(get_option('prefix'), 'share', 'games-card', 'table')
  )
endforeach
