cards = [
   ['Ac.png'],
   ['Ad.png'],
   ['Ah.png'],
   ['As.png'],
   ['Jc.png'],
   ['Jd.png'],
   ['Jh.png'],
   ['Js.png'],
   ['Qc.png'],
   ['Qd.png'],
   ['Qh.png'],
   ['Qs.png'],
   ['Kc.png'],
   ['Kd.png'],
   ['Kh.png'],
   ['Ks.png'],
   ['2c.png'],
   ['2d.png'],
   ['2h.png'],
   ['2s.png'],
   ['3c.png'],
   ['3d.png'],
   ['3h.png'],
   ['3s.png'],
   ['4c.png'],
   ['4d.png'],
   ['4h.png'],
   ['4s.png'],
   ['5c.png'],
   ['5d.png'],
   ['5h.png'],
   ['5s.png'],
   ['6c.png'],
   ['6d.png'],
   ['6h.png'],
   ['6s.png'],
   ['7c.png'],
   ['7d.png'],
   ['7h.png'],
   ['7s.png'],
   ['8c.png'],
   ['8d.png'],
   ['8h.png'],
   ['8s.png'],
   ['9c.png'],
   ['9d.png'],
   ['9h.png'],
   ['9s.png'],
   ['Tc.png'],
   ['Td.png'],
   ['Th.png'],
   ['Ts.png'],
   ['bb.png'],
   ['bbb.png'],
   ['blank.png'],
]
foreach card: cards
  install_data(card,
    install_dir : join_paths(get_option('prefix'), 'share', 'games-card', 'card-style', 'default')
  )
endforeach
